[package]
authors = ["Nathan Zadoks <nathan@nathan7.eu>"]
name = "fringe"
version = "0.0.1"
license = "(Apache-2.0 OR MIT)"

[target.'cfg(unix)'.dependencies]
libc = "0.2.14"

[target.'cfg(windows)'.dependencies]
kernel32-sys = "0.2.2"
winapi = "0.2.6"

[dependencies.valgrind_request]
optional = true
version = "1.0.0"

[dev-dependencies]
simd = "0.1"

[features]
default = ["alloc", "valgrind"]
alloc = []
valgrind = ["valgrind_request"]

# These apply only to tests within this library; assembly at -O0 is completely
# unreadable, so use -O1.
[profile.dev]
opt-level = 1

[profile.test]
opt-level = 1
